# ChessEngine

./: .gitignore  ChessGame.sln  ChessGame.vcxproj  ChessGame.vcxproj.filters  README.md  blackClient.cpp  buildBlackClient.sh  buildClient.sh  buildWhiteClient.sh  client.cpp  cmd.sh  dev.sh  dispatch.sh  notes.txt  run_docker.sh  whiteClient.cpp
code/: CMakeLists.txt
code/Source/: BaseTurn.cpp  BaseTurn.h  Board.cpp  Board.h  CMakeLists.txt  Chess.cpp  Chess.h  GameProtocolDriver.cpp  GameProtocolDriver.h  GameState.cpp  GameState.h  Interface.cpp  Interface.h  Mastermind.h  Motion.h  PotentialPin.h  StandardInitialPieceLocations.h  Status.cpp  Status.h  main.cpp
code/Source/Agents/: DynamoDBAgent.cpp  DynamoDBAgent.h  ExceptionAgent.cpp  ExceptionAgent.h  ValidationAgent.cpp  ValidationAgent.h  Validator.cpp  Validator.h
code/Source/Network/: Buffer.cpp  Buffer.h  ConnectionAgent.cpp  ConnectionAgent.h  NetworkInterface.cpp  NetworkInterface.h  WebServer.cpp  WebServer.h
code/Source/Pieces/: Bishop.cpp  Bishop.h  BlackPawn.cpp  BlackPawn.h  King.cpp  King.h  Knight.cpp  Knight.h  NullPiece.cpp  NullPiece.h  Pawn.cpp  Pawn.h  Pieces.cpp  Pieces.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  WhitePawn.cpp  WhitePawn.h
code/Source/Scans/: BaseScan.h  CompoundAxisScan.cpp  CompoundAxisScan.h  DualAxisScan.cpp  DualAxisScan.h  ScanResult.h  Scanner.cpp  Scanner.h  Scans.cpp  Scans.h  SingleAxisScan.cpp  SingleAxisScan.h
code/Source/State/: BaseState.cpp  BaseState.h  BlockScanState.cpp  BlockScanState.h  CheckmateState.cpp  CheckmateState.h  DefensiveCheckScanState.cpp  DefensiveCheckScanState.h  EscapeRouteState.cpp  EscapeRouteState.h  FinishState.cpp  FinishState.h  InitState.cpp  InitState.h  InputState.cpp  InputState.h  MoveState.cpp  MoveState.h  MoveValidityState.cpp  MoveValidityState.h  OffensiveCheckScanState.cpp  OffensiveCheckScanState.h  PathScanState.cpp  PathScanState.h  PinScanState.cpp  PinScanState.h  RelevancyState.cpp  (+5 more)
code/Tests/: RookTests.cpp  SingleAxisScanTests.cpp
(+208 files in other folders)
